<resources>
    <string name="app_name">taxi oro chofer</string>

    <string name="next">SIGUIENTE</string>
    <string name="skip">OMITIR</string>
    <string name="start">HECHO</string>

    <string name="votre_taxi_en_un_clic">Tu taxi Viaja seguro</string>
    <string name="enter_nyour_information">Iniciar seccion</string>
    <string name="phone">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="forgot_your_password">¿Olvidaste tu contraseña?</string>
    <string name="log_in">INICIAR SESIÓN</string>
    <string name="create_customer_account">CREAR CUENTA DE CLIENTE</string>
    <string name="create_driver_account">CREAR CUENTA DE CONDUCTOR</string>
    <string name="last_name">Apellido</string>
    <string name="first_name">Nombre de pila</string>
    <string name="confirm_password">Confirma la contraseña</string>
    <string name="send">ENVIAR</string>
    <string name="already_registered">YA INSCRITO, CONECTE</string>
    <string name="email">Email</string>
    <string name="enter_your_phone_number">Ingrese su número telefónico</string>
    <string name="enter_your_email_address">Ingrese su dirección de correo electrónico</string>
    <string name="enter_a_good_phone_number">Ingrese su nombre favorito</string>
    <string name="enter_your_password">Ingresa tu contraseña</string>
    <string name="enter_your_vehicle_brand">Ingrese la marca de su vehículo</string>
    <string name="enter_your_vehicle_model">Ingrese su modelo de vehículo</string>
    <string name="enter_your_vehicle_color">Ingrese el color de su vehículo</string>
    <string name="enter_your_vehicle_numberplate">Ingrese la matrícula de su vehículo</string>
    <string name="enter_a_goog_phone_number">Ingrese un buen número de teléfono</string>
    <string name="passwor_requires_at_least_characters">La contraseña requiere al menos 6 caracteres</string>
    <string name="enter_your_new_password">Introduzca su nueva contraseña</string>
    <string name="modifie">Modificada</string>
    <string name="Echec_de_modification">Error al editar</string>
    <string name="current_password_incorrect">La contraseña actual es incorrecta</string>
    <string name="enter_your_current_password">introduce tu contraseña actual</string>
    <string name="reserve_a_taxi">Reservar un taxi</string>
    <string name="create_an_account">Cree una cuenta, elija un viaje, reciba una confirmación de su viaje, haga su viaje, pague y anote al conductor.</string>
    <string name="messaging">Mensajería</string>
    <string name="communicate_to_any_driver_by_calling_or_writing_a_message">Comuníquese con cualquier conductor llamando o escribiendo un mensaje.</string>
    <string name="password_requires">La contraseña requiere al menos 8 caracteres</string>
    <string name="my_status">Mi estado</string>
    <string name="please_wait">Esperando por favor</string>
    <string name="drawer_open">Abrir el cajón de navegación</string>
    <string name="drawer_close">Cerrar el cajón de navegación</string>
    <string name="modification_d_information">Cambiar informacion</string>
    <string name="enregistrer">SALVAR</string>
    <string name="t_l_phone">Teléfono</string>
    <string name="pas_de_connexion_internet">Sin conexión a Internet</string>
    <string name="mot_de_passe_actuel">Contraseña actual</string>
    <string name="nouveau_mot_de_passe">Nueva contraseña</string>
    <string name="confirmez_le_nouveau_mot_de_passe">Confirma la nueva contraseña</string>
    <string name="enter_your_last_name">Ingrese su apellido</string>
    <string name="mot_de_passe_non_identiques">Sin contraseña idéntica</string>

    <string name="enter_your_firstname">Ponga su primer nombre</string>
    <string name="item_logout">Desconectar</string>
    <string name="item_contact_us">Contacta con nosotras</string>
    <string name="item_help">Ayuda y asistencia</string>
    <string name="item_new">Nueva</string>
    <string name="item_profile">Mi perfil</string>
    <string name="item_new_booking">Nueva reserva</string>
    <string name="item_confirmed_booking">Reserva confirmada</string>
    <string name="today">Hoy</string>
    <string name="item_onride">En viaje</string>
    <string name="item_completed">Terminada</string>
    <string name="item_confirmed">Confirmado</string>
    <string name="this_account_does_not_exist">Esta cuenta no existe</string>
    <string name="enter_another_phone_number">Ingrese otro número de teléfono</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="enter_another_password">Ingrese otra contraseña</string>
    <string name="this_account_is_inactive">Esta cuenta está inactiva. Su información esta siendo procesada</string>
    <string name="close">CERCA</string>
    <string name="cancel">CANCELAR</string>
    <string name="make_sure_you_connect_to_the_internet_and_tap_cloud">Asegúrate de conectarte a internet y tocar las nubes</string>
    <string name="no_ride_at_the_moment">No paseo en este momento</string>
    <string name="no_ride_canceled_at_the_moment">Ningún viaje cancelado en este momento</string>
    <string name="no_ride_completed_at_the_moment">Ningún viaje completado en este momento</string>
    <string name="no_ride_confirmed_at_the_moment">Ningún viaje confirmado en este momento</string>
    <string name="no_ride_on_ride_at_the_moment">No paseo en paseo en este momento</string>
    <string name="this_service_requires_the_activation_of_the_gps">Este servicio requiere la activación del servicio GPS. ¿Quieres activar el GPS?</string>
    <string name="failed_try_again">Falló, intente nuevamente</string>
    <string name="model">Modelo</string>
    <string name="brand">Marca</string>
    <string name="color">Color</string>
    <string name="reject">RECHAZAR</string>
    <string name="rejected_successfull">Rechazado exitosamente</string>
    <string name="confirmed_successfull">Confirmado con éxito</string>
    <string name="on_ride_successfull">En paseo con éxito</string>
    <string name="completed_successfull">Completado satisfactoriamente</string>
    <string name="do_you_want_to_confirm_this_ride">¿Quieres confirmar este paseo?</string>
    <string name="do_you_want_to_confirm_this_booking">¿Quieres confirmar esta reserva?</string>
    <string name="do_you_want_to_on_ride_this_ride">¿Quieres montar este paseo?</string>
    <string name="do_you_want_to_reject_this_ride">¿Quieres rechazar este paseo?</string>
    <string name="do_you_want_to_reject_this_booking">¿Quieres rechazar esta reserva?</string>
    <string name="do_you_want_to_complete_this_ride">¿Quieres completar este paseo?</string>
    <string name="vehicle_information">Información del vehículo</string>
    <string name="number_plate">Número de placa</string>
    <string name="your_information_was_sent_well_we_will_treat_them_and_inform_you_after_the_treatment_your_account_will_be_active_after_validation_of_your_information">Su información fue enviada bien. Los trataremos y le informaremos después del tratamiento. Su cuenta estará activa después de la validación de su información.</string>
    <string name="you_need_to_install_google_map_app">Necesita instalar la aplicación de mapas de google</string>
    <string name="no_reservation_confirmed_for_the_moment">Ninguna reserva confirmada por el momento</string>
    <string name="no_reservation_rejected_for_the_moment">Ninguna reserva rechazada por el momento</string>
    <string name="no_reservation_for_the_moment">No hay nuevas reservas por el momento.</string>
    <string name="view_address">Ver dirección</string>
    <string name="pay_now">PAGAR AHORA</string>
    <string name="enter_your_number_of_passenger">Ingrese el número de pasajeros de su vehículo</string>
    <string name="select_a_photo">SELECCIONA UNA FOTO</string>
    <string name="choose_a_photo_for_your_profile">Elige una foto para tu perfil</string>
    <string name="you_must_bring_out_your_face_and_shoulders_on_the_picture_in_short_we_must_recognize_you_through_the_photo">Debes resaltar la cara y los hombros en la imagen. En resumen, debemos reconocerlo a través de la foto.</string>
    <string name="select_a_photo_of_your_driver_s_license">Seleccione una foto de su licencia de conducir</string>
    <string name="take_a_good_picture_of_your_driver_s_license_all_the_necessary_information_must_come_out_in_the_photo">Tome una buena foto de su licencia de conducir. Toda la información necesaria debe salir en la foto.</string>
    <string name="select_a_photo_of_your_national_id_card">Seleccione una foto de su tarjeta de identificación nacional</string>
    <string name="item_dashboard">Tablero</string>
    <string name="item_rejected_booking">Reserva rechazada</string>
    <string name="item_rejected">Rechazada</string>
    <string name="choose_a_photo">Elige una foto</string>
    <string name="enter_your_n_vehicle_information">Ingrese la información de su vehículo</string>
    <string name="please_select_your_vehicle_type">Por favor seleccione su tipo de vehículo</string>
    <string name="number_of_passengers">Número de pasajeros</string>
    <string name="selectionnez_votre_langue">Elige tu idioma</string>
    <string name="please_select_a_language">Por favor, seleccione un idioma</string>
    <string name="item_language">Cambiar idioma</string>
    <string name="apply">APLICAR</string>
    <string name="enabled">habilitada</string>
    <string name="disabled">discapacitado</string>
    <string name="today_sales">VENTAS HOY</string>
    <string name="today_earning">GANANDO HOY</string>
    <string name="new_">NUEVA</string>
    <string name="confirmed_">CONFIRMADA</string>
    <string name="on_ride_">En paseo</string>
    <string name="completed_">TERMINADA</string>
    <string name="dashboard__">Tablero</string>
    <string name="confirmed_booking__">Reserva confirmada</string>
    <string name="new_booking__">Nueva reserva</string>
    <string name="rejected_booking__">Reserva rechazada</string>
    <string name="rejected__">Rechazada</string>
    <string name="completed__">Terminado</string>
    <string name="confirmed__">Confirmada</string>
    <string name="new__">Nuevo</string>
    <string name="on_ride__">En viaje</string>
    <string name="my_profile__">Mi perfil</string>
    <string name="en_cours">En curso</string>
    <string name="view_path">VER RUTA</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="start_ride">INICIAR VIAJE</string>
    <string name="on_ride">EN PASEO</string>
    <string name="complete">COMPLETO</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="paid">Pagado</string>
    <string name="not_paid">No pagado</string>
    <string name="edit">Editar</string>
    <string name="remove">Eliminar</string>
    <string name="activer_gps">Active el servicio GPS para compartir su ubicación con los clientes. ¿Activar GPS ahora?</string>
    <string name="vous_devez_active_le_gps">Vous devez activer le service GPS pour partager votre position avec les clients. Activez le GPS maintenant ?</string>

</resources>

