<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oro.taxi.chofer.activity.SubscribeActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/lo4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/login2">

    </ImageView>
    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:textSize="30sp"
            android:textColor="@color/colorLogoBlack"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/enter_nyour_information" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_firstname_subs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:drawableTint="@color/colorLogoBlack"
                android:drawableRight="@drawable/ic_profile_con"
                android:textSize="16sp"
                android:id="@+id/firstname_subs"
                android:background="@drawable/texto"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPersonName"
                android:hint="@string/first_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_phone_subs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="15"
                android:drawableTint="@color/colorLogoBlack"
                android:drawableRight="@drawable/ic_phone_outline"
                android:textSize="16sp"
                android:id="@+id/phone_subs"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/texto"
                android:inputType="phone"
                android:hint="@string/phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_insc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:drawableTint="@color/colorLogoBlack"
                android:drawableRight="@drawable/ic_message_outline"
                android:textSize="16sp"
                android:id="@+id/email_insc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/texto"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password_inc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="12"
                android:drawableTint="@color/colorLogoBlack"
                android:drawableRight="@drawable/ic_password_outline"
                android:textSize="16sp"
                android:id="@+id/password_subs"
                android:layout_width="match_parent"
                android:background="@drawable/texto"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="12"
                android:drawableTint="@color/colorLogoBlack"
                android:drawableRight="@drawable/ic_password_outline"
                android:textSize="16sp"
                android:id="@+id/password_conf"
                android:layout_width="match_parent"
                android:background="@drawable/texto"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:hint="@string/confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<CheckBox-->
        <!--android:id="@+id/check_email"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Recevoir de notification par mail" />-->

        <LinearLayout
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right">

            <Button
                android:textStyle="normal"
                android:layout_marginTop="19dp"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:cursorVisible="false"
                android:gravity="center"

                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/btnregis"
                android:text="@string/send"
                android:textColor="@color/colorWhite"
                android:layout_above="@+id/creer_compte"/>

            <Button
                android:textStyle="normal"
                android:gravity="center"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:background="@drawable/btnregis"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:id="@+id/i_have_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/already_registered" />

        </LinearLayout>

        <ProgressBar
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/progressBar_subs"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </LinearLayout>

</LinearLayout>
